--- a/ui/packages/ui/src/main/webapp/components/applications/applications.hbs
+++ b/ui/packages/ui/src/main/webapp/components/applications/applications.hbs
@@ -11,20 +11,5 @@
  *
  **/
  --}}
-<div class="page-layout full-height well">
-    <div class="header">
-        <div class="vertical-align-middle nav-to-applications">
-            <i class="fa fa-angle-left fa-3x"></i>
-        </div>
-        <h2 class="header-text">{{displayName}}</h2>
-    </div>
-
-    <div class="panel">
-        <div class="panel-body">
-            <div class="content">
-                <div class="tab-container"></div>
-                <div class="tab-content-container"></div>
-            </div>
-        </div>
-    </div>
-</div>
+<h2 class="header-text">Applications</h2>
+<div class="apps-grid-container installed panel"></div>
