--- a/ui/packages/ui/src/main/webapp/components/components.less
+++ b/ui/packages/ui/src/main/webapp/components/components.less
@@ -12,6 +12,8 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
+@import 'applications/applications';
+@import 'application/application';
 @import 'installer/installer';
 @import 'application-item/application-item';
 @import 'installer-navigation/installer-navigation';
