--- a/ui/packages/ui/src/main/webapp/components/configuration-item/configuration-item.less
+++ b/ui/packages/ui/src/main/webapp/components/configuration-item/configuration-item.less
@@ -15,6 +15,10 @@
     }
 }
 
+@{customElementNamespace}configuration-item:last-of-type {
+    padding-bottom: 0px;
+}
+
 @{customElementNamespace}configuration-item-collection {
     display: block;
 }
