--- a/ui/packages/ui/src/main/webapp/components/application-item/application-item.hbs
+++ b/ui/packages/ui/src/main/webapp/components/application-item/application-item.hbs
@@ -11,39 +11,6 @@
  *
  **/
  --}}
-
-<div id="{{appId}}-card" class="app-card panel">
-    <div class="panel-body">
-        <!-- card overlay buttons -->
-        <div class="card-overlay select-button-group hide-in-edit-mode">
-            <div class="block">
-                <div class="centered">
-                    <i class="fa fa-angle-right fa-4x select-application"></i>
-                </div>
-            </div>
-        </div>
-
-        <!-- card contents -->
-        <div class="name-version-container">
-            <div class="name">
-                <span>{{displayName}}</span>
-            </div>
-        </div>
-        <hr class="list-hidden"/>
-        <div class="description ellipsis">
-            <div>
-                {{#if paragraphs}}
-                    {{#join paragraphs "<br/>"}}
-                        <span>{{.}}</span>
-                    {{/join}}
-                {{else}}
-                    {{#if description}}
-                        <span>{{description}}</span>
-                    {{else}}
-                    {{/if}}
-                {{/if}}
-            </div>
-        </div>
-    </div>
-    <div class="modal-region"></div>
+<div class="name">
+    {{displayName}}
 </div>
