--- a/ui/packages/ui/src/main/webapp/components/application-item/application-item.less
+++ b/ui/packages/ui/src/main/webapp/components/application-item/application-item.less
@@ -14,7 +14,51 @@
  **/
 @{customElementNamespace}application-item-collection {
     display: block;
+    padding: @mediumSpacing;
+    padding-top: 0px;
+    padding-right: 0px;
+    text-align: center;
 }
+
 @{customElementNamespace}application-item {
-    display: block;
+    display: inline-block;
+    vertical-align: top;
+    width: ~'calc(20% - @{mediumSpacing})';
+    min-width: 100px;
+    height: 100px;
+    cursor: pointer;
+    padding: @largeSpacing;
+    border: 1px solid rgba(0,0,0,.3);
+    margin-right: @mediumSpacing;
+    margin-top: @mediumSpacing;
+    text-align: left;
+}
+
+@media (max-width: 1200px) {
+    @{customElementNamespace}application-item {
+        width: ~'calc(25% - @{mediumSpacing})';
+    }
+}
+
+@media (max-width: 800px) {
+    @{customElementNamespace}application-item {
+        width: ~'calc(33% - @{mediumSpacing})';
+    }
+}
+
+@media (max-width: 500px) {
+    @{customElementNamespace}application-item {
+        width: ~'calc(50% - @{mediumSpacing})';
+    }
+}
+
+@media (max-width: @mobileScreenSize) {
+    @{customElementNamespace}application-item {
+        display: block;
+        width: 100%;
+    }
+
+    @{customElementNamespace}application-item-collection {
+        padding-right: @mediumSpacing;
+    }
 }
