--- a/ui/packages/ui/src/main/webapp/components/application/application.hbs
+++ b/ui/packages/ui/src/main/webapp/components/application/application.hbs
@@ -11,10 +11,17 @@
  *
  **/
  --}}
-<div id="application-outline">
-    <div id="application-grid-layout" class="application-scroll scroll-area ps-container white">
-        <div class="apps-grids">
-            <div class="apps-grid-container installed"></div>
+<div class="header">
+    <button class="nav-to-applications">
+        <span class="fa fa-angle-left"></span>
+    </button>
+    <h2 class="header-text">{{displayName}}</h2>
+</div>
+<div class="panel">
+    <div class="panel-body">
+        <div class="content">
+            <div class="tab-container"></div>
+            <div class="tab-content-container"></div>
         </div>
     </div>
 </div>
