--- a/ui/packages/ui/src/main/webapp/components/components.less
+++ b/ui/packages/ui/src/main/webapp/components/components.less
@@ -22,3 +22,7 @@
 @import 'application-services/application-services';
 @import 'feature-item/feature-item';
 @import 'features/features';
+@import 'iframe/iframe';
+@import 'tab-item/tab-item';
+@import 'tab-content/tab-content';
+@import 'system-information/system-information';
