--- a/ui/packages/ui/src/main/webapp/components/feature-item/feature-item.collection.empty.hbs
+++ b/ui/packages/ui/src/main/webapp/components/feature-item/feature-item.collection.empty.hbs
@@ -11,4 +11,9 @@
  *
  **/
  --}}
-<div class="tab-content-wrapper"></div>
+<h4 align="center">
+    <span class="fa fa-refresh fa-spin fa-5x"></span>
+    <div>
+        Loading Features
+    </div>
+</h4>
