--- a/ui/packages/ui/src/main/webapp/components/tab-item/tab-item.hbs
+++ b/ui/packages/ui/src/main/webapp/components/tab-item/tab-item.hbs
@@ -11,6 +11,4 @@
  *
  **/
  --}}
-<div class="tab-wrapper">
-    <ul class="nav nav-tabs"></ul>
-</div>
+<a href="#{{id}}" data-toggle="tab" data-id="{{id}}">{{displayName}}</a>
