Migrate ConfigurationEdit.view

--- a/ui/packages/ui/src/main/webapp/components/components.less
+++ b/ui/packages/ui/src/main/webapp/components/components.less
@@ -26,3 +26,7 @@
 @import 'tab-item/tab-item';
 @import 'tab-content/tab-content';
 @import 'system-information/system-information';
+@import 'configuration-edit/configuration-edit';
+@import 'configuration-field/configuration-field';
+@import 'configuration-field-multivalue/configuration-field-multivalue';
+@import 'configuration-field-multivalue-header/configuration-field-multivalue-header';
