DDF-3750 support webapps for sources

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/source-item/source-item.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/source-item/source-item.less
@@ -22,6 +22,18 @@
         text-overflow: ellipsis;
     }
 
+    .source-actions {
+        padding-left: ~'calc(2 * @{minimumButtonSize})';
+    }
+
+    .source-actions {
+        display: block;
+    }
+
+    .source-app {
+        display: none;
+    }
+
     .source-available {
         width: @minimumButtonSize;
         text-align: center;
