--- a/ui/packages/catalog-ui-search/src/main/webapp/component/component.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/component.less
@@ -208,6 +208,7 @@
 @import 'sources/sources';
 @import 'sources-menu/sources-menu';
 @import 'source-item/source-item';
+@import 'source-app/source-app';
 @import 'sources-summary/sources-summary';
 @import 'layer-preferences/layer-preferences';
 @import 'dropdown/layers/dropdown.layers.less';
