--- a/ui/packages/catalog-ui-search/src/main/webapp/component/source-app/source-app.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/source-app/source-app.hbs
@@ -11,21 +11,10 @@
  *
  **/
  --}}
-<div class="source-available">
-    <span class="is-available fa fa-check"></span>
-    <span class="is-not-available fa fa-bolt"></span>
-</div><div class="source-name" title="{{id}}">
-    {{id}}
+<div class="is-iframe-div">
+  <iframe class="is-iframe" sandbox src="{{url}}">
+  </iframe>
 </div>
-<div class="source-actions">
-    {{#each this.sourceActions}}
-    <div class="source-action" data-help="{{this.description}}">
-         <span class="fa fa-circle"></span>
-         <button class="action-button" data-title="{{this.title}}" data-url="{{this.url}}">
-            <span>
-                {{this.title}}
-            </span>
-        </button>
-    </div>
-    {{/each}}
+<div>
+  <button class="is-primary is-ack">Done</button>
 </div>
