DDF-3741 Add query multisort and refactor sorting
DDF-3741 Fix search settings view

DDF-3741 Fix query sorting

DDF-3741 Correct formatting

DDF-3741 Fix boon parsing

DDF-3741 Fix frontend sorting

DDF-3741 Add 'add sort' button

DDF-3741 Update unit tests

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item-collection.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item-collection.hbs
@@ -11,14 +11,7 @@
  *
  **/
  --}}
-<div class="editor-properties">
 
-</div>
-<div class="editor-footer">
-    <button class="footer-remove is-negative">
-        Remove Sort
-    </button>
-    <button class="footer-save is-positive">
-        Save Sort
-    </button>
+<div class="sorts">
+
 </div>
