--- a/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/sort-item/sort-item.hbs
@@ -11,14 +11,19 @@
  *
  **/
  --}}
+<button class="sort-remove is-negative">
+    <span class="fa fa-minus">
+
+    </span>
+</button>
+<button class="sort-add is-primary">
+    <span class="fa fa-plus">
+
+    </span>
+</button>
 <div class="sort-attribute">
 
 </div>
 <div class="sort-direction">
 
 </div>
-<button class="sort-remove is-negative">
-    <span class="fa fa-minus">
-
-    </span>
-</button>
