--- a/ui/packages/catalog-ui-search/src/main/webapp/component/source-item/source-item.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/source-item/source-item.less
@@ -26,6 +26,14 @@
         padding-left: ~'calc(2 * @{minimumButtonSize})';
     }
 
+    .source-action > button {
+        width: 100%;
+        text-align: left;
+        padding: 0px @minimumSpacing;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .source-actions {
         display: block;
     }
