--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-group/result-group.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-group/result-group.hbs
@@ -14,6 +14,6 @@
 <div class="group-representation">
     {{amount}} duplicates
 </div>
-<div class="group-results">
+<div class="group-results global-bracket is-left">
 
 </div>
