--- a/ui/packages/catalog-ui-search/src/main/webapp/component/component.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/component.less
@@ -144,7 +144,6 @@
 @import 'visualization/maps/cesium/cesium';
 @import 'visualization/maps/openlayers/openlayers';
 @import 'tabs/query/tabs-query';
-@import 'visualization/visualization';
 @import 'visualization/histogram/histogram';
 @import 'visualization/table/table-viz';
 @import 'visualization/table/thead';
@@ -242,3 +241,4 @@
 @import 'search-form-interactions/search-form-interactions.less';
 @import 'layer-item/layer-item';
 @import 'layers/layers';
+@import 'lazy-load/lazy-load';
