--- a/ui/packages/catalog-ui-search/src/main/webapp/component/route/route.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/route/route.hbs
@@ -11,9 +11,13 @@
  *
  **/
  --}}
-<div class="content-left">
-
+<div class="route-navigation">
+    <div class="navigation-left">
+    </div>
+    <div class="navigation-middle">
+    </div>
+    <div class="navigation-right">
+    </div>
 </div>
-<div class="content-right">
-
+<div class="route-content">
 </div>
