--- a/ui/packages/ui/src/main/webapp/components/components.less
+++ b/ui/packages/ui/src/main/webapp/components/components.less
@@ -30,3 +30,4 @@
 @import 'configuration-field/configuration-field';
 @import 'configuration-field-multivalue/configuration-field-multivalue';
 @import 'configuration-field-multivalue-header/configuration-field-multivalue-header';
+@import 'module/module';
