--- a/ui/packages/ui/src/main/webapp/components/applications/applications.hbs
+++ b/ui/packages/ui/src/main/webapp/components/applications/applications.hbs
@@ -11,4 +11,5 @@
  *
  **/
  --}}
-<div class="apps-grid-container installed panel"></div>
+<div class="applications panel"></div>
+<div class="application"></div>
