--- a/ui/packages/ui/src/main/webapp/components/applications/applications.less
+++ b/ui/packages/ui/src/main/webapp/components/applications/applications.less
@@ -1,3 +1,19 @@
 @{customElementNamespace}applications {
     display: block;
+
+    > .applications {
+        display: block;
+    }
+    > .application {
+        display: none;
+    }
+
+    &.show-app {
+        > .applications {
+            display: none;
+        }
+        > .application {
+            display: block;
+        }
+    }
 }
