--- a/ui/packages/ui/src/main/webapp/components/module/module.hbs
+++ b/ui/packages/ui/src/main/webapp/components/module/module.hbs
@@ -11,9 +11,9 @@
  *
  **/
  --}}
- <div id="tabs">
+<div>
 
 </div>
-<div id="tabContent" class="full-height">
+<div class="full-height">
 
 </div>
