--- a/ui/packages/catalog-ui-search/src/main/webapp/dev/component/button-guide/button-guide.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/dev/component/button-guide/button-guide.hbs
@@ -21,7 +21,7 @@
                 Neutral Button
             </div>
             <div class="instance">
-                <button class="is-button">
+                <button class="is-neutral">
                     <span class="fa fa-question"></span>
                     <span>Neutral Action</span>
                 </button>
@@ -69,7 +69,47 @@
                 Icon Only Neutral Button
             </div>
             <div class="instance">
-                <button class="is-button">
+                <button class="is-neutral">
+                    <span class="fa fa-question"></span>
+                </button>
+            </div>
+            <div class="editor" data-html></div>
+        </div>
+        <div class="example">
+            <div class="title">
+                Button with Subdued Colors
+            </div>
+            <div class="instance">
+                <button class="is-neutral is-button">  <!-- basically what color you want along with the is-button class -->
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-positive is-button">
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-negative is-button">
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-primary is-button">
+                    <span class="fa fa-question"></span>
+                </button>
+            </div>
+            <div class="editor" data-html></div>
+        </div>
+        <div class="example">
+            <div class="title">
+                Disabled Buttons
+            </div>
+            <div class="instance">
+                <button class="is-neutral is-button is-disabled"> <!-- use is-disabled class or add the disabled attribute -->
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-positive is-button" disabled>
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-negative is-button is-disabled">
+                    <span class="fa fa-question"></span>
+                </button>
+                <button class="is-primary is-button is-disabled">
                     <span class="fa fa-question"></span>
                 </button>
             </div>
