--- a/ui/packages/catalog-ui-search/src/main/webapp/styles/components/init.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/styles/components/init.less
@@ -27,3 +27,4 @@
 @import 'higherordermixins';
 @import "../../component/component";
 @import "../../behaviors/navigation.behavior.less";
+@import "../../behaviors/dropdown.behavior.less";
