Use marionette regions

--- a/ui/packages/catalog-ui-search/src/main/webapp/behaviors/dropdown.behavior.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/behaviors/dropdown.behavior.less
@@ -1,3 +1,7 @@
+@{customElementNamespace}behavior-dropdown {
+  display: none;
+}
+
 [data-behavior-dropdown] {
     position: absolute;
     transform: translate3d(-50%, -50%, 0) scale(0);
