--- a/ui/packages/catalog-ui-search/src/main/webapp/dev/component/dropdown-guide/dropdown-guide.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/dev/component/dropdown-guide/dropdown-guide.hbs
@@ -18,13 +18,39 @@
     <div class="examples is-list has-list-highlighting">
         <div class="example">
             <div class="title">
-                Simple Dropdown
+                Dropdown 1
             </div>
             <div class="instance">
             
             </div>
             <div class="editor" data-html="exampleOne"></div>
+            <div class="editor" data-html="exampleOneDropdown"></div>
             <div class="editor" data-js="exampleOneView"></div>
+            <div class="editor" data-js="exampleOneDropdown"></div>
+        </div>
+        <div class="example">
+            <div class="title">
+                Dropdown with it's own dropdown
+            </div>
+            <div class="instance">
+            
+            </div>
+            <div class="editor" data-html="exampleOne"></div>
+            <div class="editor" data-html="exampleOneDropdown"></div>
+            <div class="editor" data-js="exampleTwoView"></div>
+            <div class="editor" data-js="exampleTwoDropdown"></div>
+        </div>
+        <div class="example">
+            <div class="title">
+                Dropdown with menu behavior
+            </div>
+            <div class="instance">
+            
+            </div>
+            <div class="editor" data-html="exampleOne"></div>
+            <div class="editor" data-html="exampleThreeDropdown"></div>
+            <div class="editor" data-js="exampleThreeView"></div>
+            <div class="editor" data-js="exampleThreeDropdown"></div>
         </div>
     </div>
 </div>
@@ -34,6 +60,9 @@
     </div>
     <div class="is-medium-font">
         Utilize dropdowns when you wish to leave the current context in tact, but also need to reveal a list of options, commands, or another view.
+
+        The other methods of making a dropdown are currently deprecated in favor of this method.  Please refrain from utilizing the dropdown.view or the dropdown.companion.view 
+        methods when creating new dropdowns. 
     </div>
 </div>
 <div class="section">
@@ -44,68 +73,40 @@
         <div class="is-medium-font">
             Import the 'behaviors/dropdown.behavior' into the view where you want the dropdown to be shown. 
 
-            The options that you can pass in to the 'createSimpleDropdown' method are:
+            The parameters that you pass in to the behavior are:
             <ul>
                 <li>
-                    leftIcon
+                    selector (required)
                     <ul>
                         <li>
-                            Expects a string, such as 'fa fa-bell'.  This should correspond to a font awesome icon or a codice icon.
+                            Expects a string, such as '> button'.  This should be a selector that will at most select a single element.   
+                            If it can select more than one, things won't break, but it might now behave how you want (it will always pretend you clicked the first one it encountered).
                         </li>
                     </ul>
                 </li>
                 <li>
-                    rightIcon
+                    view (required)
                     <ul>
                         <li>
-                            Expects a string, such as 'fa fa-bell'.  This should correspond to a font awesome icon or a codice icon.
+                            The Marionette View to show when the element corresponding to the selector is clicked.
+
+                            Notice how you can easily extend a view to add the navigation behavior on the fly, as in the example above.
                         </li>
                     </ul>
                 </li>
                 <li>
-                    label
+                    viewOptions (optional)
                     <ul>
                         <li>
-                            Expects a string, such as 'My Cool Dropdown'.  This should be descriptive of what your dropdown is.
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    componentToShow
-                    <ul>
-                        <li>
-                            Expects a Marionette View.  This view will be passed the basic dropdown model by default, but the modelForComponent option can override that.
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    modelForComponent
-                    <ul>
-                        <li>
-                            Expected to be a Backbone model or collection, but really it could be anything.  This is something your componentToShow is expecting to listen to, update, etc.
-                            Your componentToShow will recieve this as its model.
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    dropdownCompanionBehaviors
-                    <ul>
-                        <li>
-                            Expected to be a list of Marionette behaviors that you want to be put on the dropdown companion (which houses your componentToShow).  At the moment this is only
-                            used to pass the object { navigation: {} } so that action menus get a navigation feel to them.  By that I mean it will give you keyboard accessibility in your 
-                            menu components for free if used.
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    options
-                    <ul>
-                        <li>
-                            The options that you want to pass to your componentToShow.
+                            The options you want to be passed to the view when it gets initialized (on first click).  
+                            Typically this at the very least consists of the model you want to pass to the view.
                         </li>
                     </ul>
                 </li>
             </ul>
+
+            If close a dropdown from within the component shown in a dropdown, pull in the dropdown behavior and utilize the 
+            closeParentDropdown method by passing in an element or the view.  Calling this when not in a dropdown is harmless
         </div>
     </div>
 </div>
