--- a/ui/packages/catalog-ui-search/src/main/webapp/dev/component/dropdown-guide/exampleOne.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/dev/component/dropdown-guide/exampleOne.hbs
@@ -1,20 +1,6 @@
-<div>
+<div style="border: 1px dotted; padding: 10px;">
+    <div class="is-header">Dropdown</div>
     <button class="is-primary is-button">
-        I'm a dropdown
-    </button>
-</div>
-<div>
-    <button class="is-primary is-button">
-        I'm a dropdown
-    </button>
-</div>
-<div>
-    <button class="is-primary is-button">
-        I'm a dropdown
-    </button>
-</div>
-<div>
-    <button class="is-primary is-button">
-        I'm a dropdown
+        Click me
     </button>
 </div>
