--- a/ui/packages/catalog-ui-search/src/main/webapp/dev/component/component.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/dev/component/component.less
@@ -6,3 +6,4 @@
 @import 'static-dropdown-guide/static-dropdown-guide';
 @import 'dynamic-dropdown-guide/dynamic-dropdown-guide';
 @import 'dropdown-guide/dropdown-guide';
+@import 'input-guide/input-guide';
