Exp button temp

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/editor/editor.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/editor/editor.hbs
@@ -23,26 +23,7 @@
 
 </div>
 <div class="editor-footer">
-    <button class="editor-edit is-primary">
-        <span class="fa fa-pencil">
-
-        </span>
-        <span>
-            Edit
-        </span>
-    </button><!--
-    --><button class="editor-cancel is-negative">
-         <span class="fa fa-times">
-         </span>
-        <span>
-            Cancel
-        </span>
-    </button><!--
-    --><button class="editor-save is-positive">
-         <span class="fa fa-floppy-o">
-         </span>
-        <span>
-            Save
-        </span>
-    </button>
+    {{{button class="editor-edit" type="primary" icon="fa fa-pencil" label="Edit"}}}<!--
+    -->{{{button class="editor-cancel" subdued=true type="negative" icon="fa fa-pencil" label="Cancel"}}}<!--
+    -->{{{button class="editor-save" disabled=true type="positive" icon="fa fa-pencil" label="Save"}}}
 </div>
