--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-item/result-item.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-item/result-item.less
@@ -94,10 +94,12 @@
 
   .header-icon {
     display: none;
+    padding-right: @minimumSpacing;
   }
   
   .source-icon {
     display: inline;
+    padding-right: @minimumSpacing;
   }
 }
 
