DDF-3961 Updates DOM to be React managed, adds region behavior
 - Extends the attachElContent method for Views in Marionette so that
 they utilize React's renderer.  This allows us to take advantage of the
 reconciliation provided by the renderer while still using Marionette.
 - Building on top of the attachElContent extension comes the new region behavior
 for Marionette Views.  It allows regions (children components) to live
 through subsequent renders.  See the dev guide for more details on
 usage, but suffice to say that it will allow us to render with impunity
 (no more needing to reshow a view every time you want to react to a
 model change).  Going forward we should be using this behavior rather
 than going through Marionette's provided regions (which are destroyed
 upon render).
 - Updates the inputs in the UI to no longer use the value attribute.
 With React's render now being utilized, value can't be specified
 without an onchange event, otherwise React will lock down the input and
 prevent the user from changing it (since it's seen as controlled).
 Luckily, the views were already setting the initial values so this was
 an easy change to make (simply remove the value in the hbs).
 - Updates the upload.view to handle the new React renderer.  Because of
 the reconciliation, we no longer were recieving a new dom node upon
 clicking new in the upload view.  Dropzone would then complain that it
 was already attached.  There were changes to the upload models to
 ensure that when an upload ends, the models stopped listening to the
 dropzone (since now a new upload would take over the existing
 dropzone).
 - Updates the workspace-item view and the workspace-templates view to
 use the new region behavior.
 - Updates the content-title view and the query-title view to handle the
 new React renderer.  Both were relying on rerendering and the value
 attribute, so I updated them to use JSX so I could utilize defaultValue
 and the key attribute to ensure React saw them a

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/input/number/input-number.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/input/number/input-number.hbs
@@ -12,7 +12,7 @@
  **/
  --}}
 <div class="if-editing">
-    <input id="{{cid}}" value="{{value}}" placeholder="{{property.placeholder}}" name="{{property.id}}" type="number">
+    <input id="{{cid}}" placeholder="{{property.placeholder}}" name="{{property.id}}" type="number">
     <div class="for-error">
         <span class="fa fa-exclamation-triangle"></span>
         Not a valid number.
