DDF-4307 Fixes source dropdown render issue
 - This issue stems from our switch over to the React render.  It's smart about reconciling the DOM, which is normally preferred behavior.  However, this component depended on the old render behavior of simply blowing away the HTML entirely.  For now, we can emulate that behavior by attaching a random key to the root fragment.

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/query-src/query-src.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/query-src/query-src.less
@@ -44,4 +44,10 @@
   .choice:not(.is-available) {
     opacity: @minimumOpacity;
   }
+
+  .fa-home,
+  .fa-cloud,
+  .fa-exclamation-triangle {
+    margin-right: 0.5 * @minimumSpacing;
+  }
 }
