finally got the timezones working
 - tickFormat was a complicated dead end.  In the end, I found an alternative where I get moment to take the value from the timeline and pretend it's in my timezone (see the render method and what is done with subtract and offsetUtc)

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/input/date/input-date.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/input/date/input-date.less
@@ -18,6 +18,10 @@
     min-height: @minimumButtonSize;
   }
 
+  .input-group > .is-divider {
+    margin: 0px;
+  }
+
   .input-group > span.input-group-addon {
     border-radius: @border-radius;
     background: @primary-color !important;
