--- a/ui/packages/catalog-ui-search/src/main/webapp/component/input/date/input-date.hbs
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/input/date/input-date.hbs
@@ -13,9 +13,13 @@
  --}}
 <div class="if-editing">
     <div class='input-group date'>
-        <input type='text' placeholder="{{property.placeholder}}"/>
+        <input type='text' placeholder="{{property.placeholder}}" />
         <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+        <div class="is-divider is-inline"></div>
+        <span class="input-group-addon">
+            <span>T</span>
         </span>
     </div>
 </div>
