DDF-5076 Migrate result item to react

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/result-add/result-add.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/result-add/result-add.less
@@ -3,6 +3,7 @@
   padding: @minimumSpacing;
 
   .is-existing-list {
+    white-space: nowrap;
     width: 100%;
     display: block;
     padding: 0px @largeSpacing;
@@ -25,6 +26,7 @@
 
   .composed-button {
     width: 100%;
+    white-space: nowrap;
     display: block;
     > @{customElementNamespace}dropdown {
       padding: 0px @largeSpacing;
